fixed the reading from excel file thing